--- a/Assets/Editor/AbilityFramework.Editor.asmdef
+++ b/Assets/Editor/AbilityFramework.Editor.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "AbilityFramework.Editor"
+    "name": "AbilityFramework.Editor",
+    "rootNamespace": "AbilityFramework",
+    "references": [],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
